Name:                postforum
Version:             0.1
Synopsis:            A postgres-powered forum
Description:         Playing with a conversation model
License:             PublicDomain
Author:              defanor
Maintainer:          defanor <at uberspace.net>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

extra-source-files: src/*.hs

-- wildcards do not really work as intended here:
-- https://github.com/haskell/cabal/issues/784, and probably the best
-- solution would be to rename those files
data-files: static/js/*.js,
            static/css/*.css,
            snaplets/heist/templates/*.tpl

-- cabal 1.16.0.2 does not include this into tarball, but 1.18.0.3
-- does: https://github.com/haskell/cabal/issues/1477
extra-doc-files: README.md

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable postforum
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1,
    -- TODO: add versions
    snaplet-postgresql-simple,
    digestive-functors-heist,
    digestive-functors-snap,
    digestive-functors,
    transformers,
    postgresql-simple,
    vector,
    aeson,
    containers


  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.2

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
